--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <body class="fullscreen">
     <div class="container">
       
-      <h2 class="title" id="mainTitle">Gæt en hovedstad!</h2>
+      <h2 class="title" id="mainTitle">Gæt en hovedstad! V2</h2>
       <br>
       <div>
         <div>
